vantworks logo overflow fix

--- a/sass/base/_headings.scss
+++ b/sass/base/_headings.scss
@@ -7,10 +7,6 @@
     display: inline-block;
     font-family: helvetica, sans-serif;
   }
-  img{
-    width:120px;
-    margin-top: -50px;
-  }
 }
 
 .vantworks-logo-grid{
